# website

./: .buildinfo  .gitignore  Adjustment of 50 studies to 37 studies.docx  CNAME  LICENSE.html  LICENSE.md  Makefile  README.html  README.md  _config.yml  _toc.yml  book-requirements.txt  config.json  config.toml  data-access.html  data-access.json  genindex.html  github-jupyter.html  github-jupyter.json  ibis-1.html  ibis-1.json  ibis-2.html  ibis-2.json  ibis-3.html  ibis-3.json  ibis-4.html  ibis-4.json  index.html  index.json  index.md  main.py  myst.search.json  myst.xref.json  myst.yml  objects.inv  preface.html  preface.json  pyproject.toml  schedule.html  schedule.json  (+8 more)
_sources/: README.md  index.md
_static/: README.md  shibuya.css  simpleicons.css
content/: _index.Rmd  _index.html  _index.md  about.md  index.md  module-table.html  modules.html  modules.md  overview-notes.md  pedagogy.md  policies.md  syllabus.md  team-building.md  tutorials.md
data/: co2.csv  co2.py  lessons.yml  nh1.html  nh2.html
data-raw/: lessons.R  lessons.tsv
docs/: 404.html  index.html  index.xml  sitemap.xml
instructor/: xsede-resource-request.Rmd
overview/: pedagogy.html  schedule.html  schedule.md  syllabus.html  syllabus.md
public/: 404.html  index.html  index.xml  sitemap.xml
reading/: 00-introduction.html  00-preface.html  01-github-jupyter.html  01-github-jupyter.md  01-github.html  02-jupyter.html  02-visualization-basics.html  02-visualization-basics.ipynb  03-data-access.html  04-transform.html  04-transform.ipynb  04-visualization-basics.html  04b-gh-actions.html  (+17 more)
(+415 files in other folders)
