[project]
name = "website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ibis-framework[duckdb]>=10.8.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "mystmd>=1.6.0",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
]
